# pyproject.toml

[build-system]
requires      = [
    "setuptools>=65.5.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "echo"
version = "0.1.0"
description = "Broadcast echo server"
readme = "README.md"
authors = [{ name = "Daniel Ibarrola", email = "daniel.ibarrola.sanchez@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["server", "echo"]
requires-python = ">=3.12"


[project.urls]
Homepage = "https://github.com/Daniel-Ibarrola/EchoServer"
